[package]
name = "tofuya-wasi-gitlab"
version = "0.1.0"
edition = "2024"

[dependencies]
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
waki = { version = "0.5.1", features = ["json", "multipart"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:tofuya-wasi-gitlab"

[package.metadata.component.dependencies]
